home component, json data, employees component

--- a/src/app/entry/ui/navbar/navbar.component.html
+++ b/src/app/entry/ui/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <h2>HCM Solutions</h2>
   <div class="user-options">
-    <h2>User</h2>
+    <h2>{{user}}</h2>
     <button mat-button (click)="logout()" class="logout-button">
       Logout
       <mat-icon>logout</mat-icon>
