--- a/src/app/entry/ui/sidebar/sidebar.component.html
+++ b/src/app/entry/ui/sidebar/sidebar.component.html
@@ -6,4 +6,8 @@
       <a mat-list-item routerLink="/departments">Departments</a>
     </mat-nav-list>
   </mat-sidenav>
+
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
 </mat-sidenav-container>
