--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,8 @@
-<p>home works!</p>
-<button (click)="logout()">
-  Logout
-</button>
+<div *ngIf="employee$ | async as employee" class="employee-info">
+  <h1>Welcome back, {{ employee.name }}!</h1>
+  <div class="info">
+    <p><strong>Department:</strong> {{ employee.department }}</p>
+    <p><strong>Position:</strong> {{ employee.position }}</p>
+    <p><strong>Email:</strong> {{ employee.email }}</p>
+  </div>
+</div>
