Routing and super user access

--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -1,6 +1,6 @@
 @if (isSuperUser) {
   <div>
-    <button mat-raised-button (click)="addUser()" color="accent" [disabled]="this.selection.selected.length > 1">
+    <button mat-raised-button (click)="addUser()" color="accent">
       <mat-icon>add_box</mat-icon>
       Add
     </button>
