forms and buttons style

--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -1,5 +1,5 @@
 @if (isSuperUser) {
-  <div>
+  <div class="button-container">
     <button mat-raised-button (click)="addUser()" color="accent">
       <mat-icon>add_box</mat-icon>
       Add
