--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,3 +87,14 @@ body {
 .logout-button mat-icon {
   color: inherit;
 }
+
+.button-container {
+  padding: 16px;
+  button {
+    margin-right: 8px;
+    
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
